@startuml
' Минимальные настройки
skinparam classAttributeIconSize 0
hide empty members

' ============= ПАКЕТ MODEL =============
package "model" {
  class MusicBand {
    - id: Integer
    - name: String
    - coordinates: Coordinates
    - numberOfParticipants: int
    - genre: MusicGenre
  }
  
  class Coordinates {
    - x: int
    - y: Integer
  }
  
  enum MusicGenre {
    RAP
    SOUL
    POP
  }
  
  class CollectionManager {
    - collection: ArrayList<MusicBand>
    + add(band: MusicBand)
    + removeById(id: int)
    + clear()
    + addIfMin(band: MusicBand)
    + removeGreater(band: MusicBand)
    + removeLower(band: MusicBand)
    + countByStudio(studioName: String)
    + filterLessThanParticipants(participants: int)
    + getMin(): MusicBand
  }
}

' ============= ПАКЕТ COMMANDS =============
package "commands" {
  interface Command {
    + execute(args: String[])
    + getDescription(): String
  }
  
  class CommandManager {
    - commands: Map<String, Command>
    + register(name: String, cmd: Command)
    + execute(input: String)
  }
  
  ' Все команды (только названия классов)
  class AddCommand
  class RemoveByIdCommand
  class ShowCommand
  class InfoCommand
  class HelpCommand
  class ClearCommand
  class SaveCommand
  class ExitCommand
  class UpdateIdCommand
  class AddIfMinCommand
  class RemoveGreaterCommand
  class RemoveLowerCommand
  class CountByStudioCommand
  class FilterLessThanParticipantsCommand
  class PrintDescendingCommand
  class ExecuteScriptCommand
}

' ============= ПАКЕТ IO =============
package "io" {
  class ConsoleManager {
    + show(message: String)
    + readCommand(): String
    + readLine(prompt: String): String
  }
  
  class FileManager {
    - fileName: String
    + load(): Collection<MusicBand>
    + save(bands: Collection<MusicBand>)
  }
}

' ============= ПАКЕТ UTILS =============
package "utils" {
  class ConsoleParser {
    + parse(): MusicBand
  }
  
  class ScriptParser {
    + parse(): MusicBand
    + hasNext(): boolean
  }
}

' ============= ОСНОВНЫЕ СВЯЗИ =============

' Модель
MusicBand *-- Coordinates
MusicBand ..> MusicGenre
CollectionManager *-- MusicBand

' Команды (только наследование интерфейса)
Command <|-- AddCommand
Command <|-- RemoveByIdCommand
Command <|-- ShowCommand
Command <|-- InfoCommand
Command <|-- HelpCommand
Command <|-- ClearCommand
Command <|-- SaveCommand
Command <|-- ExitCommand
Command <|-- UpdateIdCommand
Command <|-- AddIfMinCommand
Command <|-- RemoveGreaterCommand
Command <|-- RemoveLowerCommand
Command <|-- CountByStudioCommand
Command <|-- FilterLessThanParticipantsCommand
Command <|-- PrintDescendingCommand
Command <|-- ExecuteScriptCommand

' Регистрация команд
CommandManager o-- Command

' Основные зависимости (только ключевые)
AddCommand --> CollectionManager
AddCommand --> ConsoleParser
ShowCommand --> CollectionManager
ShowCommand --> ConsoleManager
ExecuteScriptCommand --> ScriptParser
FileManager --> ConsoleParser
FileManager --> ScriptParser

' Точка входа
class App
App --> CommandManager
App --> CollectionManager
App --> ConsoleManager
App --> FileManager

@enduml